--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@remix-run/react": "^1.3.1",
     "@remix-run/vercel": "^1.3.1",
+    "@stitches/react": "^1.2.7",
+    "ethers": "^5.6.1",
     "react": "^17.0.2",
+    "react-data-grid": "^7.0.0-beta.11",
     "react-dom": "^17.0.2",
-    "remix": "^1.3.1"
+    "remix": "^1.3.1",
+    "remix-utils": "^2.9.0",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.3.1",
