--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "postinstall": "remix setup node"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^0.1.1",
     "@remix-run/react": "^1.3.1",
     "@remix-run/vercel": "^1.3.1",
     "@stitches/react": "^1.2.7",
     "ethers": "^5.6.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
-    "react-data-grid": "^7.0.0-beta.11",
     "react-dom": "^17.0.2",
     "remix": "^1.3.1",
     "remix-utils": "^2.9.0",
@@ -25,6 +26,7 @@
     "@remix-run/dev": "^1.3.1",
     "@remix-run/eslint-config": "^1.3.1",
     "@remix-run/serve": "^1.3.1",
+    "@types/lodash": "^4.14.180",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "eslint": "^8.11.0",
