--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-select": "^0.1.1",
+    "@radix-ui/react-tooltip": "^0.1.7",
     "@remix-run/react": "^1.3.1",
     "@remix-run/vercel": "^1.3.1",
     "@stitches/react": "^1.2.7",
